# LibraPix

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/logo/black/: icon.icns
assets/logo/blue/: icon.icns
assets/logo/white/: icon.icns
crates/librapix-app/: Cargo.toml  build.rs
crates/librapix-app/src/: assets.rs  format.rs  main.rs  startup_log.rs  ui.rs
crates/librapix-app/tests/: runtime_message_handoff.rs
crates/librapix-config/: Cargo.toml
crates/librapix-config/src/: lib.rs  model.rs  pathing.rs
crates/librapix-core/: Cargo.toml
crates/librapix-core/src/app/: mod.rs
crates/librapix-core/src/domain/: mod.rs  non_destructive.rs
crates/librapix-i18n/: Cargo.toml
crates/librapix-i18n/src/: lib.rs
crates/librapix-indexer/: Cargo.toml
crates/librapix-indexer/src/: ignore.rs  lib.rs  media.rs
crates/librapix-projections/: Cargo.toml
crates/librapix-projections/src/: gallery.rs  lib.rs  timeline.rs
crates/librapix-search/: Cargo.toml
crates/librapix-search/src/: lib.rs
crates/librapix-storage/: Cargo.toml
crates/librapix-storage/migrations/: 0001_baseline.sql  0002_source_root_lifecycle.sql  0003_indexed_media_baseline.sql  0004_indexed_media_metadata_incremental.sql  0005_tags_baseline.sql  0006_source_root_tags.sql  0007_source_root_display_name.sql  0008_source_root_statistics.sql  0009_projection_snapshots.sql  0010_projection_snapshots.sql  0011_catalog_history_reconciliation.sql
crates/librapix-storage/src/: catalog.rs  lib.rs  migration.rs
crates/librapix-thumbnails/: Cargo.toml
crates/librapix-thumbnails/src/: lib.rs
crates/librapix-video-tools/: Cargo.toml
crates/librapix-video-tools/src/: error.rs  ffmpeg.rs  filters.rs  lib.rs  models.rs  paths.rs  probe.rs  runner.rs  validate.rs
crates/librapix-video-tools/tests/: core.rs
docs/: AGENT_KNOWLEDGE_BASE.md  DEPENDENCIES.md  PROMPT_KNOWLEDGE_BASE.md  README.md  REPOSITORY_RULES.md  TROUBLESHOOTING.md  branding.md  deep-research-for-fixing-libraPix-startup-freeze-and-thumbnail-bursts.md  message-flow.md  storage.md
docs/adrs/: 0001-workspace-boundaries.md  0002-config-path-policy.md  0003-sqlite-storage-baseline.md  0004-source-root-lifecycle-policy.md  0005-indexing-ignore-baseline.md  0006-metadata-incremental-readmodels.md  0007-replaceable-search-baseline.md  0008-timeline-gallery-projections.md  0009-thumbnail-cache-baseline.md  0010-media-details-tags-actions-baseline.md  0011-ui-shell-and-design-tokens.md  0012-fluent-inspired-design-system.md  0013-interaction-milestone.md  0014-quality-filtering-exclusion.md  0015-media-view-architecture.md  0016-root-level-auto-tags.md  0017-async-startup-and-background-work.md  0018-timeline-scrubber-anchor-navigation.md  0019-windows-signing-and-publisher-baseline.md  0020-chip-based-tag-ignore-interactions.md  0021-catalog-first-architecture-foundation.md  0021-staged-runtime-coordination-and-snapshot-hydration.md  0022-video-short-generation-subsystem.md
docs/architecture/: actions.md  background-thumbnail-responsiveness-audit.md  catalog-first-architecture.md  catalog-first-startup-completion-audit.md  config.md  i18n.md  ignore-rules.md  indexing.md  issue-12-runtime-optimization-summary.md  layers.md  media-ui.md  message-flow.md  metadata.md  non-destructive-guarantee.md  overview.md  projections.md  search.md  startup-thumbnail-reuse-audit.md  storage.md  thumbnail-apply-handoff-audit.md  thumbnails.md  ui.md
docs/roadmap/: about-library-management-checklist.md  all-videos-aggregation-thumbnails-checklist.md  bootstrap-checklist.md  browse-model-correctness-checklist.md  catalog-first-architecture-checklist.md  config-storage-checklist.md  future.md  github-release-update-checker-checklist.md  interaction-milestone-checklist.md  library-indexing-foundation-checklist.md  library-statistics-checklist.md  media-navigation-product-updates-checklist.md  media-view-milestone-checklist.md  metadata-incremental-search-checklist.md  mvp-remaining-checklist.md  mvp.md  quality-milestone-checklist.md  scrollbar-scrubber-correctness-checklist.md  search-projections-checklist.md  selection-dims-autotag-checklist.md  settings-library-ux-checklist.md  staged-runtime-followup-checklist.md  startup-aggregation-ingestion-checklist.md  tag-ignore-chip-interaction-checklist.md  timeline-followup-correctness-checklist.md  timeline-scrubber-checklist.md  ui-ux-redesign-checklist.md  windows-copy-dialog-background-checklist.md  windows-copy-timeline-scrubber-correctness-checklist.md
packaging/windows/: README.md
packaging/windows/msix/: AppxManifest.xml
packaging/windows/scripts/: New-LibrapixDevCertificate.ps1  New-LibrapixMsix.ps1  Sign-LibrapixBinary.ps1
src/: main.rs
