[workspace]
members = [
    "crates/librapix-app",
    "crates/librapix-config",
    "crates/librapix-core",
    "crates/librapix-indexer",
    "crates/librapix-i18n",
    "crates/librapix-storage",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
iced = "0.14.0"
directories = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"
globset = "0.4.18"
walkdir = "2.5.0"
imagesize = "0.14.0"
