[workspace]
members = [
    "crates/librapix-app",
    "crates/librapix-config",
    "crates/librapix-core",
    "crates/librapix-indexer",
    "crates/librapix-i18n",
    "crates/librapix-projections",
    "crates/librapix-search",
    "crates/librapix-storage",
    "crates/librapix-thumbnails",
    "crates/librapix-video-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "tokio"] }
directories = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"
globset = "0.4.18"
walkdir = "2.5.0"
imagesize = "0.14.0"
chrono = "0.4.44"
strsim = "0.11.1"
image = { version = "0.25.9", default-features = true }
sha2 = "0.10.9"
rfd = "0.15"
notify = "8.2.0"
semver = "1.0.27"
ureq = "3.2.0"
serde_json = "1.0.145"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
