[package]
name = "librapix-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
iced.workspace = true
librapix-config = { path = "../librapix-config" }
librapix-core = { path = "../librapix-core" }
librapix-i18n = { path = "../librapix-i18n" }
librapix-storage = { path = "../librapix-storage" }
