[package]
name = "librapix-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
iced.workspace = true
opener = "0.7"
chrono.workspace = true
rfd.workspace = true
notify.workspace = true
serde.workspace = true
semver.workspace = true
ureq.workspace = true
serde_json.workspace = true
librapix-config = { path = "../librapix-config" }
librapix-core = { path = "../librapix-core" }
librapix-indexer = { path = "../librapix-indexer" }
librapix-i18n = { path = "../librapix-i18n" }
librapix-projections = { path = "../librapix-projections" }
librapix-search = { path = "../librapix-search" }
librapix-storage = { path = "../librapix-storage" }
librapix-thumbnails = { path = "../librapix-thumbnails" }
librapix-video-tools = { path = "../librapix-video-tools" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.26"

[dev-dependencies]
iced_futures = "0.14.0"
